chore: Fix spacing
ref STUFFS-24

--- a/apps/web/components/contact-form/ContactForm.module.scss
+++ b/apps/web/components/contact-form/ContactForm.module.scss
@@ -2,6 +2,7 @@
 
 .contact-wrapper {
   max-width: 700px;
+  width: 100%;
   margin: auto;
   display: flex;
   justify-content: center;
@@ -101,7 +102,9 @@
 
     &[type="submit"] {
       cursor: pointer;
-      transition: opacity 0.3s ease-in-out, transform 0.1s ease-in-out;
+      transition:
+        opacity 0.3s ease-in-out,
+        transform 0.1s ease-in-out;
 
       &:hover {
         opacity: 0.7;
